--- a/build
+++ b/build
@@ -16,8 +16,8 @@ action ()
             action lib
             $OCAMLBUILD test/tests.otarget
             ;;
-        doc)     shift; pkg-doc $* doc/dev-api.docdir ;;
-        api-doc) shift; pkg-doc $* doc/api.docdir ;;
+        doc)     shift; topkg doc --dev $* ;;
+        api-doc) shift; topkg doc doc $* ;;
         clean)   $OCAMLBUILD -clean ;;
         *)       $OCAMLBUILD $* ;;
     esac
