--- a/build
+++ b/build
@@ -12,13 +12,10 @@ action ()
     case $1 in
         default) action lib;;
         lib) $OCAMLBUILD fmt.cma fmt.cmxa fmt_tty.cma fmt_tty.cmxa ;;
-        test)
-            action lib
-            $OCAMLBUILD test/tests.otarget
-            ;;
+        test) shift; topkg build && topkg test $* ;;
         doc)     shift; topkg doc --dev $* ;;
         api-doc) shift; topkg doc $* ;;
-        clean)   $OCAMLBUILD -clean ;;
+        clean)   topkg clean ;;
         *)       $OCAMLBUILD $* ;;
     esac
 }
